--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
 
     <%= render 'shared/navbar' %>
     <main>
-      <div id="scrollContainer">
-        <%= render 'shared/tile' %>
+      <div id="scrollContainer">]
+        <%= yield %>
       </div>
     </main>
 
