--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -1,5 +1,26 @@
-<div class="company-heading">
-  <h2 class="name" data-sr="enter bottom move <%= @fadeDistance %> over <%= @fadeTime %>">
-    Crook and Baker is a creative agency that connects with people through digital interaction.
-  </h2>
-</div>
+<section class="tile intro">
+  <div class="content">
+    <h1 class="title">Crook & Baker</h1>
+  </div>
+</section>
+<section class="tile" style="background-image: url(<%= image_path('SkylineBlack2.jpg') %>);">
+  <div class="content">
+    <div class="company-heading">
+      <h2 class="name" data-sr="enter bottom move <%= @fadeDistance %> over <%= @fadeTime %>">
+        Crook and Baker is a creative agency that connects with people through digital interaction.
+      </h2>
+    </div>
+  </div>
+</section>
+<section class="tile" style="background: green;">
+  <div class="content">
+  </div>
+</section>
+<section class="tile" style="background: blue;">
+  <div class="content">
+  </div>
+</section>
+<section class="tile" style="background: red;">
+  <div class="content">
+  </div>
+</section>
