--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,12 +9,11 @@
     <span class="bar middle"></span>
     <span class="bar bottom"></span>
   </button>
-  <ul class="directory desktop">
-    <li><%= link_to "Home", home_path, class: "active" %></li>
-    <li><%= link_to "About", about_path %></li>
-    <li><%= link_to "Services", stuff_path %></li>
-    <li><%= link_to "Contact", contact_path %></li>
-    <li><%= link_to "Thoughts", blog_path %></li>
+  <ul class="directory">
+    <li><%= link_to "Home", "", class: "active" %></li>
+    <li><%= link_to "About", "" %></li>
+    <li><%= link_to "Services", "" %></li>
+    <li><%= link_to "Contact", "" %></li>
   </ul>
   <p class="address">
     Crook & Baker Digital</br>
