--- a/app/assets/stylesheets/global/_variables.scss
+++ b/app/assets/stylesheets/global/_variables.scss
@@ -8,29 +8,5 @@ body {
   width: 100%;
 }
 
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,600);
-@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300);
-
-// @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
-// @import url(http://fonts.googleapis.com/css?family=Libre+Baskerville);
-
-// @font-face {
-//   font-family: 'Weather Icons';
-//   src: font-url('fonts/weather/WeatherIcons-Regular.otf') format('opentype');
-//   font-weight: normal;
-//   font-style: normal;
-// }
-
-// @font-face {
-//   font-family: 'Panton Light';
-//   src: font-url('fonts/panton/panton.light.otf') format('opentype');
-//   font-weight: normal;
-//   font-style: normal;
-// }
-
-// @font-face {
-//   font-family: 'Panton Light';
-//   src: font-url('fonts/panton/panton.light-italic.otf') format('opentype');
-//   font-weight: normal;
-//   font-style: italic;
-// }
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,600);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300);
