--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -10,7 +10,9 @@ nav {
   background-color: white;
   height: $nav-mobile-height;
   left: 0;
+  opacity: 0.99;
   padding: 1.5rem 1.5rem;
+  position: relative;
   transition: all 0.7s;
   top: -$nav-mobile-height;
   width: 100%;
@@ -19,7 +21,6 @@ nav {
     display: inline-block;
     opacity: 0.99;
     text-align: center;
-    z-index: 150;
     .logo {
       @include three-box-logo($dimension: 4rem, $color: $primary-color);
       display: inline-block;
@@ -35,7 +36,6 @@ nav {
     height: $button-dimension;
     margin-top: 0.5rem;
     width: 4rem;
-    z-index: 150;
     &:hover { .bar { background-color: $primary-color; } }
   }
   .address {
@@ -56,7 +56,6 @@ nav {
   top: 0;
   transition: opacity 0.5s;
   width: 100%;
-  z-index: 150;
   li {
     display: block;
     text-align: center;
@@ -83,18 +82,16 @@ nav {
     border-bottom: 0;
     border-right: 1px solid $nav-font-passive-color;
     height: 100%;
-    left: -20%;
-    opacity: 0.99;
-    // padding: $nav-offset-padding 0;
+    left: 0;
+    opacity: 0;
     width: 20%;
-    z-index: 150;
     .logo-container {
       display: block;
       margin-bottom: 15rem;
       text-align: center;
     }
     &.active {
-      left: 0;
+      opacity: 1;
     }
     .menu-button { display: none; }
     .address {
@@ -114,6 +111,7 @@ nav {
     display: block;
     height: auto;
     margin-bottom: 6rem;
+    opacity: 1;
     padding: 0;
     padding-right: $nav-padding;
     position: static;
