Remove erroneous character from front page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
     <%= render 'shared/navbar' %>
     <main>
-      <div id="scrollContainer">]
+      <div id="scrollContainer">
         <%= yield %>
       </div>
     </main>
