Wire menu and tiles together

--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -1,9 +1,9 @@
-<section class="tile intro">
+<section class="tile intro" data-anchor="intro">
   <div class="content">
     <h1 class="title">Crook & Baker</h1>
   </div>
 </section>
-<section class="tile" style="background-image: url(<%= image_path('SkylineBlack2.jpg') %>);">
+<section class="tile" style="background-image: url(<%= image_path('SkylineBlack2.jpg') %>);" data-anchor="home">
   <div class="content">
     <div class="company-heading">
       <h2 class="name" data-sr="enter bottom move <%= @fadeDistance %> over <%= @fadeTime %>">
@@ -12,15 +12,15 @@
     </div>
   </div>
 </section>
-<section class="tile" style="background: green;">
+<section class="tile" style="background: green;" data-anchor="services">
   <div class="content">
   </div>
 </section>
-<section class="tile" style="background: blue;">
+<section class="tile" style="background: blue;" data-anchor="about">
   <div class="content">
   </div>
 </section>
-<section class="tile" style="background: red;">
+<section class="tile" style="background: red;" data-anchor="contact">
   <div class="content">
   </div>
 </section>
