--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav>
+<nav id="mainMenu">
   <div class="logo-container">
     <%= link_to "#" do %>
       <h1 class="logo"><div class="box"></div></h1>
@@ -10,10 +10,10 @@
     <span class="bar bottom"></span>
   </button>
   <ul class="directory">
-    <li><%= link_to "Home", "", class: "active" %></li>
-    <li><%= link_to "About", "" %></li>
-    <li><%= link_to "Services", "" %></li>
-    <li><%= link_to "Contact", "" %></li>
+    <li data-menuanchor="home"><%= link_to "Home", "#home", class: "active" %></li>
+    <li data-menuanchor="services"><%= link_to "Services", "#services" %></li>
+    <li data-menuanchor="about"><%= link_to "About", "#about" %></li>
+    <li data-menuanchor="contact"><%= link_to "Contact", "#contact" %></li>
   </ul>
   <p class="address">
     Crook & Baker Digital</br>
