--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -7,23 +7,23 @@ $nav-padding: 3rem;
 $nav-offset-padding: 2rem;
 
 nav {
-  background-color: white;
+  background-color: transparent;
   height: $nav-mobile-height;
   left: 0;
-  opacity: 0.99;
   padding: 1.5rem 1.5rem;
-  position: relative;
+  position: absolute;
   transition: all 0.7s;
   top: -$nav-mobile-height;
   width: 100%;
   z-index: 100;
   .logo-container {
     display: inline-block;
-    opacity: 0.99;
+    outline: 0;
     text-align: center;
     .logo {
       @include three-box-logo($dimension: 4rem, $color: $primary-color);
       display: inline-block;
+      z-index: 150;
     }
   }
   &.active {
@@ -36,6 +36,7 @@ nav {
     height: $button-dimension;
     margin-top: 0.5rem;
     width: 4rem;
+    z-index: 150;
     &:hover { .bar { background-color: $primary-color; } }
   }
   .address {
@@ -44,9 +45,9 @@ nav {
 }
 
 .directory {
-  background-color: inherit;
+  background-color: transparent;
   font-weight: 100;
-  height: 100%;
+  height: 100vh;
   list-style-type: none;
   margin: 0;
   opacity: 0;
@@ -71,6 +72,7 @@ nav {
     }
   }
   &.active {
+    background-color: white;
     opacity: 1;
     right: 0;
   }
@@ -84,6 +86,7 @@ nav {
     height: 100%;
     left: 0;
     opacity: 0;
+    position: relative;
     width: 20%;
     .logo-container {
       display: block;
