--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav id="mainMenu">
   <div class="logo-container">
-    <%= link_to "#" do %>
+    <%= link_to "#home" do %>
       <h1 class="logo"><div class="box"></div></h1>
     <% end %>
   </div>
