Update google fonts declaration

--- a/app/assets/stylesheets/global/_variables.scss
+++ b/app/assets/stylesheets/global/_variables.scss
@@ -8,6 +8,5 @@ body {
   width: 100%;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,500);
-@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,500|Roboto+Slab:400,100,300);
 
