Wroking on services slides

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,12 +25,14 @@
 
 @import "modules/main";
 @import "modules/navbar";
+@import "modules/fp_nav";
 @import "modules/tile";
 
 // Pages
 
 @import "pages/main_pages/home";
 @import "pages/main_pages/about";
+@import "pages/main_pages/services";
 
 // Debug Box
 
