--- a/app/assets/stylesheets/global/_variables.scss
+++ b/app/assets/stylesheets/global/_variables.scss
@@ -1,5 +1,8 @@
 $base-page-spacing: 6rem;
 
+$light-green: #24C2AF;
+$dark-green: #1C9C8D;
+
 body {
   background-color: black;
   box-sizing: border-box;
@@ -7,6 +10,4 @@ body {
   position: relative;
   width: 100%;
 }
-
-// @import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,500|Roboto+Slab:400,100,300);
 
