--- a/app/assets/stylesheets/pages/main_pages/_home.scss
+++ b/app/assets/stylesheets/pages/main_pages/_home.scss
@@ -6,10 +6,11 @@
     .title {
       color: white;
       display: block;
-      font-family: $font-family-serif;
-      font-size: 10rem;
-      line-height: 50rem;
+      // font-family: $font-family-sans-serif;
+      font-size: 8rem;
+      font-weight: 700;
       text-align: center;
+      text-transform: uppercase;
     }
   }
 }
