--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -1,9 +1,9 @@
 <section class="tile intro" data-anchor="intro">
   <div class="content">
-    <h1 class="title">Crook & Baker</h1>
+    <h1 class="title">Stay connected</h1>
   </div>
 </section>
-<section class="tile" style="background-image: url(<%= image_path('SkylineBlack2.jpg') %>);" data-anchor="home">
+<section class="tile home" style="background-image: url(<%= image_path('SkylineBlack2.jpg') %>);" data-anchor="home">
   <div class="content">
     <div class="company-heading">
       <h2 class="name" data-sr="enter bottom move <%= @fadeDistance %> over <%= @fadeTime %>">
@@ -12,15 +12,19 @@
     </div>
   </div>
 </section>
-<section class="tile" style="background: green;" data-anchor="services">
+<section class="tile services" data-anchor="services">
+  <div class="content">
+    <div class="slide" style="background: green;"> Slide 1 </div>
+    <div class="slide" style="background: red;" style="background: blue;"> Slide 2 </div>
+    <div class="slide" style="background: blue;" style="background: blue;" style="background: blue;"> Slide 3 </div>
+    <div class="slide" style="background: green;"> Slide 4 </div>
+  </div>
+</section>
+<section class="tile about" style="background: blue;" data-anchor="about">
   <div class="content">
   </div>
 </section>
-<section class="tile" style="background: blue;" data-anchor="about">
-  <div class="content">
-  </div>
-</section>
-<section class="tile" style="background: red;" data-anchor="contact">
+<section class="tile contact" style="background: red;" data-anchor="contact">
   <div class="content">
   </div>
 </section>
