--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,10 +10,10 @@
     <span class="bar bottom"></span>
   </button>
   <ul class="directory">
-    <li data-menuanchor="home"><%= link_to "Home", "#home", class: "active" %></li>
-    <li data-menuanchor="services"><%= link_to "Services", "#services" %></li>
-    <li data-menuanchor="about"><%= link_to "About", "#about" %></li>
-    <li data-menuanchor="contact"><%= link_to "Contact", "#contact" %></li>
+    <li><%= link_to "Home", "#home", data: { menuanchor: "home" } %></li>
+    <li><%= link_to "Services", "#services", data: { menuanchor: "services" } %></li>
+    <li><%= link_to "About", "#about", data: { menuanchor: "about" } %></li>
+    <li><%= link_to "Contact", "#contact", data: { menuanchor: "contact" } %></li>
   </ul>
   <p class="address">
     Crook & Baker Digital</br>
