Test heroku precompile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,7 +30,7 @@
   margin: 45px;
   padding: 10px;
   background: $smoke;
-  border: 1px solid $oil;
+  border: 1px solid #000;
   @include box_sizing;
   @include radius;
 }
