Create location independent buttons for navbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,14 +15,7 @@
 
 // Framework
 
-  // Mixins
-
-  @import "framework/mixins/framework";
-  @import "framework/mixins/buttons";
-
-  // Components
-
-  @import "framework/components/buttons";
+@import "framework/framework";
 
 // Modules
 
