--- a/app/assets/stylesheets/global/_root.scss
+++ b/app/assets/stylesheets/global/_root.scss
@@ -1,15 +1,26 @@
 body {
   background-color: $white;
   box-sizing: border-box;
-  height: 100%;
   margin: 0;
   padding: 0;
   position: relative;
-  width: 100%;
 }
 
 html {
   font-size: 62.5%;
+}
+
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
+main {
+  height: 100%;
+  left: 0;
+  position: absolute;
+  right: 0;
+  width: 100%;
 }
 
 .debug_dump {
