--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,5 +12,6 @@
     = csrf_meta_tags
 
   %body
-    = render "shared/navbar"
     = yield
+    = render "shared/menu"
+    = render "shared/navbar"
