--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -1,5 +1,6 @@
-%header
-  = button_tag(class: "btn btn-square btn-md btn-colorPrimary btn-hamburger btn-right btn-margin", data: { behavior: "toggle-menu" }) do
+%header.navbar
+  = button_tag("big corporation", class: "btn btn-navbar btn-colorPrimary btn-bgPrimary btn-margin", style: "color: white;")
+  = button_tag(class: "btn btn-navbar btn-square btn-colorPrimary btn-hamburger btn-right btn-margin", data: { behavior: "toggle-menu" }) do
     = content_tag(:span, "", class: "btn-hamburger_bar")
     = content_tag(:span, "MENU", class: "btn-hamburger_prompt")
     = content_tag(:span, "CLOSE", class: "btn-hamburger_prompt btn-hamburger_prompt-active")
