--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -1,4 +1,4 @@
-%header.navbar
+%header.navbar.navbar-top
   = button_tag("big corporation", class: "btn btn-navbar btn-colorPrimary btn-bgPrimary btn-margin", style: "color: white;")
   = button_tag(class: "btn btn-navbar btn-square btn-colorPrimary btn-hamburger btn-right btn-margin", data: { behavior: "toggle-menu" }) do
     = content_tag(:span, "", class: "btn-hamburger_bar")
